commitMessage : 8238173: jshell - switch statement with a single default not return cause syntax error